--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+body {
+  background-color: #2c3e50;
+  font-family: "Libre Franklin";
+  color: beige;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Poppins";
+}
+
 .App {
   text-align: center;
 }
@@ -7,6 +17,9 @@
   pointer-events: none;
 }
 
+.testArea {
+  padding-bottom: 20px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
