--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,13 @@ h1, h2, h3, h4 {
 }
 
 .testArea {
-  padding-bottom: 20px;
-  right:50%
+  position: relative;
+  display: flex;
+  direction: ltr;
+  padding-left: 20px;
+  align-items: center;
+  outline-color: white;
+  padding-bottom: 10px;
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
